--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
         <div class="content">
             <span class="logo"><a href="#">All in One</a></span>
             <ul>
-                <li><a href="https://ik.missyao.top">iKuai</a></li>
-                <li><a href="https://op.missyao.top">OpenWrt</a></li>
-                <li><a href="https://nas.missyao.top">Home.NAS</a></li>
-                <li><a href="https://alist.missyao.top">Alist</a></li>
-                <li><a href="https://www.missyao.ml">TVBox</a></li>
-                <li><a href="https://github.com/LHZ-922">Github</a></li>
+                <li><a href="https://192.168.20.202:5001">NAS内网</a></li>
+                <li><a href="https://nas.hfgr.ml:5001">NAS外网</a></li>
+                <li><a href="https://192.168.20.19:5001">Photo.NAS</a></li>
             </ul>
         </div>
     </header>
