--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
     <div class="container">
     <main>
         <div class="left">
-            <h1>Hey, I'm<br>
-                Miss.Yao
+            <h1>内网<br>
+          MacOS:“smb:\\192.168.20.202”
+          Windows:“\\192.168.20.202”
+            <h1>外网（需要IPv6）<br>
+          MacOS:“smb:\\nas.hfgr.ml”
+          Windows:“\\nas.hfgr.ml”
             </h1>
             <h2>
                  Developer:) 
