--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
             <h1>外网（需要IPv6）<br>
           MacOS:“smb:\\nas.hfgr.ml”
           Windows:“\\nas.hfgr.ml”
+                 <h2>照片视频<br>
+          MacOS:“smb:\\192.168.20.19”
+          Windows:“\\192.168.20.19”
             </h1>
             <h2>
-                 Developer:) 
+                 MissYao.Developer:) 
             </h2>
             <div class="btn">
   
