--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <main>
         <div class="left">
             <h1>内网<br>
-          MacOS:「smb:\\192.168.20.202」
-          Windows:「\\192.168.20.202」
+          MacOS:smb:\\192.168.20.202
+          Windows:\\192.168.20.202
             <h1>外网（需要IPv6）<br>
-          MacOS:「smb:\\nas.hfgr.ml」
-          Windows:「\\nas.hfgr.ml」
+          MacOS:smb:\\nas.hfgr.ml
+          Windows:\\nas.hfgr.ml
             <h1>照片视频<br>
-          MacOS:「smb:\\192.168.20.19」
-          Windows:「\\192.168.20.19」
+          MacOS:smb:\\192.168.20.19
+          Windows:\\192.168.20.19
             </h1>
             <h2>
                  MissYao.Developer:) 
