--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="https://192.168.20.202:5001">NAS内网</a></li>
                 <li><a href="https://nas.hfgr.ml:5001">NAS外网</a></li>
-                <li><a href="https://192.168.20.19:5001">Photo.NAS</a></li>
+                <li><a href="https://192.168.20.19:5001">照片视频</a></li>
             </ul>
         </div>
     </header>
