--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <div class="left">
             <h1>内网<br>
           MacOS:
-                smb:\\192.168.20.202
+                 <h2>smb:\\192.168.20.202</h2>
           Windows:
-                \\192.168.20.202
+                 <h2>\\192.168.20.202</h2>
             <h1>外网（需要IPv6）<br>
           MacOS:
-                smb:\\nas.hfgr.ml
+                 <h2>smb:\\nas.hfgr.ml</h2>
           Windows:
-                \\nas.hfgr.ml
+                 <h2>\\nas.hfgr.ml</h2>
             <h1>照片视频<br>
           MacOS:smb:
-                \\192.168.20.19
+                 <h2>\\192.168.20.19</h2>
           Windows:
-                \\192.168.20.19
+                 <h2>\\192.168.20.19</h2>
             </h1>
             <h2>
                  MissYao.Developer:) 
