--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
     <div class="container">
     <main>
         <div class="left">
-            <h1>内网<br>
-          MacOS:
+           <h1>内网<br>
+          <h1>MacOS:<br>
                  <h2>smb:\\192.168.20.202</h2>
-          Windows:
+           <h1>Windows:<br>
                  <h2>\\192.168.20.202</h2>
             <h1>外网（需要IPv6）<br>
-          MacOS:
+           <h1>MacOS:<br>
                  <h2>smb:\\nas.hfgr.ml</h2>
-          Windows:
+           <h1>Windows:<br>
                  <h2>\\nas.hfgr.ml</h2>
             <h1>照片视频<br>
-          MacOS:smb:
+           <h1>MacOS:smb:<br>
                  <h2>\\192.168.20.19</h2>
-          Windows:
+           <h1>Windows:<br>
                  <h2>\\192.168.20.19</h2>
             </h1>
             <h2>
