--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
     <div class="container">
     <main>
         <div class="left">
-           <h1>内网</h1>
-          <h1>MacOS:</h1>
-                 <h2>smb:\\192.168.20.202</h2>
-           <h1>Windows:</h1>
-                 <h2>\\192.168.20.202</h2>
-            <h1>外网（需要IPv6）</h1>
-           <h1>MacOS:</h1>
-                 <h2>smb:\\nas.hfgr.ml</h2>
-           <h1>Windows:</h1>
-                 <h2>\\nas.hfgr.ml</h2>
-            <h1>照片视频</h1>
-           <h1>MacOS:smb:</h1>
-                 <h2>\\192.168.20.19</h2>
-           <h1>Windows:</h1>
-                 <h2>\\192.168.20.19</h2>
+           <h1>内网<br>
+          <h1>MacOS:<br>
+                 smb:\\192.168.20.202
+           <h1>Windows:<br>
+                 \\192.168.20.202
+            <h1>外网（需要IPv6）<br>
+           <h1>MacOS:<br>
+                 smb:\\nas.hfgr.ml
+           <h1>Windows:<br>
+                 \\nas.hfgr.ml
+            <h1>照片视频<br>
+           <h1>MacOS:smb:<br>
+                 \\192.168.20.19
+           <h1>Windows:<br>
+                 \\192.168.20.19
             </h1>
             <h2>
                  MissYao.Developer:) 
